[improve][test] Improve integration test profiling test example (#24701)